--- a/astrophysics-club/components/globals/Navbar.css
+++ b/astrophysics-club/components/globals/Navbar.css
@@ -5,6 +5,7 @@
     --nav-logo-width: 100px;
     --spacing-800: 64px;
 }
+
 .navigation {
     display: flex;
     padding: 0;
@@ -12,11 +13,24 @@
     align-items: center;
     gap: -32px;
     align-self: stretch;
+    justify-content: space-between;
 }
+
 @media screen and (max-width: 768px) {
     .navigation {
         padding-top: 24px;
         gap: -32px;
+    }
+}
+@media screen and (max-width: 576px) {
+    .navigation {
+        padding-top: 24px 0px;
+        gap: -32px;
+        display: flex;
+        width: 375px;
+        height: 880px;
+        flex-direction: column;
+        align-items: flex-start;
     }
 }
 .nav-logo {
@@ -30,17 +44,23 @@
     width: 64px;
     aspect-ratio: 1/1;
 }
+.nav-content {
+    display: flex;
+    /* flex: 1 0 0; */
+    padding: 0px 20px;
+    justify-content: flex-end;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(400px);
+}
 .nav-links {
     display: flex;
     min-width: 664px;
-    padding: 0px var(--spacing-800, 64px);
-    padding-right: 64px;
-    justify-content: end;
+    max-width: max-content;
+    padding: 0px 50px;
+    justify-content: space-around;
+    align-self: flex-end;
     align-items: center;
     gap: 60px;
-    flex: 1 0 0;
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(40px);
 }
 @media screen and (max-width: 768px) {
     .nav-links {
@@ -48,6 +68,17 @@
         padding: 0px var(--spacing-500, 40px);
         align-items: center;
         gap: var(--spacing-600, 48px);
+    }
+}
+@media screen and (max-width: 576px) {
+    .nav-links {
+        min-width: none;
+        width: 80vw;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        gap: 32px;
+        align-self: stretch;
     }
 }
 .nav-link {
@@ -63,6 +94,14 @@
 }
 .nav-link:hover {
     border-bottom: 3px solid #fff;
+}
+@media screen and (max-width: 576px) {
+    .nav-link {
+        display: flex;
+        align-items: flex-end;
+        gap: 20px;
+        align-self: stretch;
+    }
 }
 .nav-link a {
     color: #fff;
