add proper background

--- a/astrophysics-club/sites/home/Home.css
+++ b/astrophysics-club/sites/home/Home.css
@@ -1,14 +1,9 @@
-:root {
-    --bg-image: "https://images.unsplash.com/photo-1465788786008-f75a725b34e9";
-}
-
 main.home {
     min-height: 100vh;
-    background-image: url("https://images.unsplash.com/photo-1465788786008-f75a725b34e9");
-    background: lightgray #0b0d17;
+    background-color: #0b0d17;
+    background-image: url("../../public/assets/bg/space.jpeg");
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
+    background-size: contain;
+    background-position-x: right;
+    background-blend-mode: lighten;
 }
-
-/* lightgray 50% / cover no-repeat, var(--color-blue-900, #0B0D17) */
