--- a/astrophysics-club/components/globals/Navbar.css
+++ b/astrophysics-club/components/globals/Navbar.css
@@ -6,6 +6,10 @@
     --spacing-800: 64px;
 }
 
+* {
+    color: var(--text-color-1);
+}
+
 .navigation {
     display: flex;
     padding: 0;
@@ -50,7 +54,7 @@
     padding: 0px 20px;
     justify-content: flex-end;
     background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(400px);
+    backdrop-filter: blur(40px);
 }
 .nav-links {
     display: flex;
@@ -104,7 +108,6 @@
     }
 }
 .nav-link a {
-    color: #fff;
     font-family: "Barlow Condensed";
     font-size: 20px;
     font-style: normal;
