--- a/astrophysics-club/components/globals/bg/Star.sass
+++ b/astrophysics-club/components/globals/bg/Star.sass
@@ -11,28 +11,14 @@ $numStarThreeStars: 200
 $numShootingStars: 10
 $width: 100%
 
-html
-  height: 100%
-  body
-    width: 100%
-    height: 100%
-    margin: 0
-.container
+.star-container
   display: block
-  position: relative
-  width: 100%
-  height: 100%
+  position: absolute
+  width: auto
+  height: auto
   background: linear-gradient(to bottom, #020107 0%, #201b46 100%)
-  .text
-    color: #FFF
-    position: absolute
-    top: 50%
-    right: 50%
-    margin: -10px -75px 0 0
-    font-size: 20px
-    font-family: sans-serif
-    font-weight: bold
-  
+  z-index: -10
+
 @function create-stars($n)
 
   $stars: "#{random($starFieldWidth)}px #{random($starFieldHeight)}px #FFF"
@@ -53,14 +39,13 @@ html
   &:after
     content: " "
     top: -$starStartOffset
-    width: $starSize 
+    width: $starSize
     height: $starSize
     border-radius: 50%
     position: absolute
     backgroud: transparent
     box-shadow: create-stars($numStars)
-    
-  
+
 @mixin shooting-star-template($numStars, $starSize, $speed)
   z-index: 10
   width: $starSize
@@ -72,7 +57,7 @@ html
   right: 0
   background: linear-gradient(to top, rgba(255,255,255,0), rgba(255,255,255,1))
   animation: animShootingStar $speed linear infinite
-  
+
 .stars
   @include star-template($numStarOneStars, 1px, $starOneScrollDuration)
 .stars1
@@ -81,13 +66,12 @@ html
   @include star-template($numStarThreeStars, 3px, $starThreeScrollDuration)
 .shooting-stars
   @include shooting-star-template($numShootingStars, 5px, 10s)
-    
+
 @keyframes animStar
   from
     transform: translateY(0px)
   to
     transform: translateY(-#{$starFieldHeight}px) translateX(-#{$starFieldWidth}px)
-    
 
 @keyframes animShootingStar
   from
@@ -98,5 +82,3 @@ html
     transform: translateY(-#{$starFieldHeight}px) translateX(-#{$starFieldWidth}px) rotate(-45deg)
     opacity: 1
     height: 800px
-  
-    
