added event cards with css

--- a/astrophysics-club/components/events/cards/TopPackageCard.css
+++ b/astrophysics-club/components/events/cards/TopPackageCard.css
@@ -1,32 +1,47 @@
 .package-card {
+    padding: 0rem 0.2rem;
+    display: grid;
     border: 1px solid #ccc;
     border-radius: 8px;
     overflow: hidden;
-    margin: 16px;
-    width: 300px;
+    margin: 20px;
+    width: 270px;
+    height: 100%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .package-card-image {
+}
+
+.package-card-image {
     width: 100%;
-    height: 200px;
+    height: 100% ;
     object-fit: cover;
-  }
-  
-  .package-card-content {
+}
+
+.package-card-content {
+    display: grid;
+    grid-template-rows: auto auto auto; /* Divides into 3 rows for h3, p, and button */
+    gap: 8px; /* Space between grid items */
     padding: 16px;
-  }
-  
-  .package-card-content h3 {
+}
+
+.package-card-content h3 {
     margin: 0 0 8px;
-  }
-  
-  .package-card-content p {
+}
+
+.package-card-content p {
     margin: 0;
     color: #ffffff;
-  }
-  .package-button {
+}
+
+.package-button-container {
+    display: flex;
+    justify-content: center; /* Centers the button horizontally */
+    align-items: center;
+    margin-top: 12px;
+}
+
+.package-button {
     padding: 10px 20px;
+    width: auto;
     font-size: 1em;
     background-color: #942f01;
     color: #fff;
@@ -39,4 +54,3 @@
 .package-button:hover {
     background-color: #e92f01;
 }
-  
