--- a/astrophysics-club/components/events/cards/TopPackagesSection.css
+++ b/astrophysics-club/components/events/cards/TopPackagesSection.css
@@ -1,69 +1,63 @@
 .top-packages-section {
-  padding: 40px 20px;
-  background-color: #f9f9f957;
-  text-align: center;
-  /* border: 2px solid red; */
+    padding: 40px 20px;
+    background-color: #31b3a8de;
+    text-align: center;
+    border: 2px solid red;
 }
 
 .top-packages-section h2 {
-  margin-bottom: 24px;
-  font-size: 2em;
-  color: #333;
+    /* margin-bottom: 10px; */
+    margin-top: 4rem;
+    font-size: 3.6rem;
+    color: #333;
 }
 
 .packages-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-/* src/components/TopPackagesSection/TopPackagesSection.css */
-
-.top-packages-section {
-  padding: 20px;
-  background-color: #8a006700;
-}
-
-.packages-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 3rem;
+    margin-top: 2rem;
+    padding: 3rem 5rem;
+    width: 100%;
+    height: auto;
+    background-color: rgba(255, 192, 203, 0.336);
 }
 
 .package-card {
-  background-color: rgba(255, 255, 255, 0.226);
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  width: 280px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s;
+    border-radius: 12px;
+    overflow: hidden;
+    /* height: auto; */
+    /* width: 300px; */
+
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .package-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.452);
-  cursor: pointer;
+    transform: translateY(-10px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.452);
+    cursor: pointer;
 }
 
-.package-image {
-  width: 100%;
-  height: 280px;
-  object-fit: cover;
-}
+/* .package-image {
+    width: auto;
+    height: 480px;
+    object-fit: cover;
+} */
 
 .package-card h3 {
-  font-size: 1.5rem;
-  margin: 10px;
+    font-size: 1.2rem;
+    margin: 5px;
 }
 
 .package-card p {
-  font-size: 1rem;
-  margin: 10px;
+    font-size: 1rem;
+    margin: 10px;
 }
 
 @media screen and (max-width: 480px) {
-  .package-card p {
-    font-size: 0.8rem;
-  }
+    .package-card p {
+        font-size: 0.8rem;
+    }
 }
