--- a/astrophysics-club/components/events/cards/TopPackageCard.css
+++ b/astrophysics-club/components/events/cards/TopPackageCard.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 .package-card {
     padding: 0rem 0.2rem;
     display: grid;
@@ -12,7 +15,7 @@
 
 .package-card-image {
     width: 100%;
-    height: 100% ;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -45,6 +48,9 @@
     font-size: 1em;
     background-color: #942f01;
     color: #fff;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
     border: none;
     border-radius: 4px;
     cursor: pointer;
