--- a/astrophysics-club/src/app/style.css
+++ b/astrophysics-club/src/app/style.css
@@ -8,5 +8,5 @@
     --accent-color: #a64edf;
 
     /* fonts */
-    --font-family: "Inter", "Roboto", sans-serif;
+    /* --font-family: "Inter", "Roboto", sans-serif; */
 }
