--- a/astrophysics-club/src/app/globals.css
+++ b/astrophysics-club/src/app/globals.css
@@ -93,7 +93,7 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 @media (prefers-color-scheme: dark) {
